[package]
name = "mani"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
clap = { version = "4.4", features = ["derive"] }
futures = "0.3.28"
serde_json = "1.0"
rust_fzf = "0.1"
reqwest = "0.11"
scraper = "0.17"
ron = "0.8"
url = "2.4"
zip = "0.6"
dirs = "5"