[package]
name = "matm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
clap = { version = "4.4", features = ["derive"] }
selector = { path = "./selector" }
futures = "0.3.28"
serde_json = "1"
reqwest = "0.11"
scraper = "0.17"
ron = "0.8"
zip = "0.6"
dirs = "5"
base64 = "0.21"
openssl = "0.1"
